--- a/tools/styles.css
+++ b/tools/styles.css
@@ -2,7 +2,7 @@
 
 button, input {
     padding: 5px;
-    background-color: rgb(181, 251, 140);
+    background-color: rgb(135, 135, 135);
     border-radius: 10px;
 }
 
@@ -10,17 +10,20 @@ button:hover, input:hover {
         background-color: rgb(112, 221, 112);
     }
 
-
 .sidbareElement, .sidebar {
-    background-color: rgb(30, 252, 252);
+    background-color: rgb(244, 100, 100);
     display: flex;
     width: 100%;
     justify-content:center;
     
 }
+input::placeholder {
+    color: black;
+    border: 2pix solid black
 
+}
 .e {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
  main {
@@ -31,7 +34,7 @@ button:hover, input:hover {
     #map {
         width: 80%;
         height: 100%;
-        background-color: rgb(188, 186, 190);
+        background-color: rgba(86, 73, 54, 0.823);
         display: flex;
         align-items: center;
         align-self: center;
@@ -52,16 +55,16 @@ button:hover, input:hover {
         height: 25px;
     }
     .path {
-        background-color: rgb(126, 249, 115);
+        background-color: rgb(136, 211, 129);
     }
     .obstacle {
-        background-color: rgb(73, 73, 73);
+        background-color: rgb(0, 0, 0);
     }
     .food {
         background-color:rgb(255, 0, 0);
     }
     .hill {
-        background-color: rgb(207, 86, 0);
+        background-color: rgb(0, 41, 145);
     }
 
     .on {
